# scraper

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt  test.html  test_request.py
app/: main.py
app/internal/: __init__.py  scrap_router.py
