[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Никита Савченко"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
